--- a/cross+int.ini
+++ b/cross+int.ini
@@ -5,15 +5,15 @@ maxsep = 90.
 nbins = 15      
 nmult = 50        
 #npatch = 50
-nbootstrap = 300  
-brute = False    
+nbootstrap = 100 
+brute = False
 nquant = 6       
 cutoff = 3        
 
 #seed1 = 12936
 #seed2 = 19284
 
-sample = 'sinAGNWISEniBPT'
+sample = passivecrop
 write = True
 corrplot = True
 ratioplot = True
