--- a/cross+int.ini
+++ b/cross+int.ini
@@ -3,17 +3,17 @@
 minsep = 10.
 maxsep = 90. 
 nbins = 15      
-nmult = 50        
+nmult = 80        
 #npatch = 50
 nbootstrap = 100 
 brute = False
-nquant = 6       
+nquant = 3       
 cutoff = 3        
 
 #seed1 = 12936
 #seed2 = 19284
 
-sample = passivecrop
+sample = control
 write = True
 corrplot = True
 ratioplot = True
