--- a/cross+int.ini
+++ b/cross+int.ini
@@ -3,7 +3,7 @@
 minsep = 10.
 maxsep = 90. 
 nbins = 15      
-nmult = 80        
+nmult = 100        
 #npatch = 50
 nbootstrap = 100 
 brute = False
@@ -14,6 +14,7 @@ cutoff = 3
 #seed2 = 19284
 
 sample = control
+gclass = 3
 write = True
 corrplot = True
 ratioplot = True
