--- a/cross+int.ini
+++ b/cross+int.ini
@@ -3,18 +3,15 @@
 minsep = 10.
 maxsep = 90. 
 nbins = 15      
-nmult = 100        
+nmult = 10        
 #npatch = 50
-nbootstrap = 100 
+nbootstrap = 50 
 brute = False
-nquant = 3       
-cutoff = 3        
+nquant = 4       
+cutoff = 3     
 
-#seed1 = 12936
-#seed2 = 19284
-
-sample = control
-gclass = 3
+sample = Auger
+gclass = 0
 write = True
 corrplot = True
 ratioplot = True
