--- a/cross+int.ini
+++ b/cross+int.ini
@@ -5,13 +5,13 @@ maxsep = 90.
 nbins = 15      
 nmult = 10        
 #npatch = 50
-nbootstrap = 50 
+nbootstrap = 100 
 brute = False
 nquant = 4       
 cutoff = 3     
 
-sample = Auger
-gclass = 0
+sample = sinAGNWISEniBPT
+gclass = 2
 write = True
 corrplot = True
 ratioplot = True
