plots with new (final?) samples

--- a/cross+int.ini
+++ b/cross+int.ini
@@ -7,11 +7,11 @@ nmult = 10
 #npatch = 50
 nbootstrap = 100 
 brute = False
-nquant = 4       
+nquant = 2       
 cutoff = 3     
 
-sample = sinAGNWISEniBPT
-gclass = 2
+sample = 700control
+gclass = 3
 write = True
 corrplot = True
 ratioplot = True
