--- a/cross+int.ini
+++ b/cross+int.ini
@@ -3,15 +3,16 @@
 minsep = 10.
 maxsep = 90. 
 nbins = 15      
-nmult = 10        
+nmult = 15        
 #npatch = 50
-nbootstrap = 100 
+nbootstrap = 500 
 brute = False
-nquant = 2       
+nquant = 4       
 cutoff = 3     
 
 sample = 700control
 gclass = 3
+bptagn = 99
 write = True
 corrplot = True
 ratioplot = True
