testing variances in r: pearson R, bootstrap

--- a/cross+int.ini
+++ b/cross+int.ini
@@ -10,8 +10,8 @@ brute = False
 nquant = 4       
 cutoff = 3     
 
-sample = 700control
-gclass = 3
+sample = agn
+gclass = 0
 bptagn = 99
 write = True
 corrplot = True
