--- a/cross+int.ini
+++ b/cross+int.ini
@@ -10,8 +10,8 @@ brute = False
 nquant = 4       
 cutoff = 3     
 
-sample = agn
-gclass = 0
+sample = 700control
+gclass = 2
 bptagn = 99
 write = True
 corrplot = True
