--- a/cross+int.ini
+++ b/cross+int.ini
@@ -1,17 +1,20 @@
 ######################
 [Parameters]
-minsep = 10.
-maxsep = 90. 
-nbins = 15      
-nmult = 10        
+minsep = 5.
+maxsep = 25. 
+nbins = 10      
+nmult = 15        
 #npatch = 50
-nbootstrap = 10000 
+nbootstrap = 500 
 brute = False
 nquant = 4       
-cutoff = 3     
+#cutoff = 3
+bin_K = adhoc
+def_thresh = 25
+def = low
 
 sample = 700control
-gclass = 3
+gclass = 0
 bptagn = 99
 write = True
 corrplot = True
