--- a/cross+int.ini
+++ b/cross+int.ini
@@ -1,8 +1,9 @@
 ######################
 [Parameters]
-minsep = 5.
-maxsep = 25. 
-nbins = 10      
+minsep = 2.
+maxsep = 70. 
+nbins = 15
+bin_type = Log      
 nmult = 15        
 #npatch = 50
 nbootstrap = 500 
@@ -10,8 +11,8 @@ brute = False
 nquant = 4       
 #cutoff = 3
 bin_K = adhoc
-def_thresh = 25
-def = low
+def_thresh = 23.5
+def = high
 
 sample = 700control
 gclass = 0
