--- a/cross+int.ini
+++ b/cross+int.ini
@@ -1,10 +1,10 @@
 ######################
 [Parameters]
-minsep = 2.
-maxsep = 70. 
-nbins = 15
+minsep = 5.
+maxsep = 20. 
+nbins = 10
 bin_type = Log      
-nmult = 15        
+nmult = 5        
 #npatch = 50
 nbootstrap = 500 
 brute = False
@@ -12,12 +12,12 @@ nquant = 4
 #cutoff = 3
 bin_K = adhoc
 def_thresh = 23.5
-def = high
+def = low
 
 sample = 700control
 gclass = 0
 bptagn = 99
-write = True
+write = False
 corrplot = True
-ratioplot = True
+skyplot = True
 ######################
