finished low/high deflection random cuts

--- a/cross+int.ini
+++ b/cross+int.ini
@@ -1,10 +1,10 @@
 ######################
 [Parameters]
 minsep = 5.
-maxsep = 20. 
-nbins = 10
+maxsep = 25. 
+nbins = 15
 bin_type = Log      
-nmult = 5        
+nmult = 15        
 #npatch = 50
 nbootstrap = 500 
 brute = False
@@ -17,7 +17,7 @@ def = low
 sample = 700control
 gclass = 0
 bptagn = 99
-write = False
+write = True
 corrplot = True
 skyplot = True
 ######################
