--- a/cross+int.ini
+++ b/cross+int.ini
@@ -1,18 +1,18 @@
 ######################
 [Parameters]
-minsep = 5.
+minsep = 2.
 maxsep = 25. 
 nbins = 15
 bin_type = Log      
 nmult = 15        
 #npatch = 50
-nbootstrap = 500 
+nbootstrap = 1000 
 brute = False
-nquant = 4       
+nquant = 5       
 #cutoff = 3
-bin_K = adhoc
+bin_K = quantiles
 def_thresh = 23.5
-def = low
+def = none
 
 sample = 700control
 gclass = 0
