--- a/cross+int.ini
+++ b/cross+int.ini
@@ -2,11 +2,11 @@
 [Parameters]
 minsep = 2.
 maxsep = 25. 
-nbins = 15
+nbins = 20
 bin_type = Log      
-nmult = 15        
+nmult = 100        
 #npatch = 50
-nbootstrap = 1000 
+nbootstrap = 500 
 brute = False
 nquant = 5       
 #cutoff = 3
@@ -14,7 +14,7 @@ bin_K = quantiles
 def_thresh = 23.5
 def = none
 
-sample = 700control
+sample = agn
 gclass = 0
 bptagn = 99
 write = True
