--- a/cross+int.ini
+++ b/cross+int.ini
@@ -1,20 +1,20 @@
 ######################
 [Parameters]
 minsep = 2.
-maxsep = 25. 
-nbins = 20
+maxsep = 12. 
+nbins = 10
 bin_type = Log      
 nmult = 100        
 #npatch = 50
 nbootstrap = 500 
 brute = False
-nquant = 5       
+nquant = 4       
 #cutoff = 3
-bin_K = quantiles
+bin_K = adhoc
 def_thresh = 23.5
 def = none
 
-sample = agn
+sample = 700control
 gclass = 0
 bptagn = 99
 write = True
