succesfully applied deflection mask

--- a/cross+int.ini
+++ b/cross+int.ini
@@ -1,7 +1,7 @@
 ######################
 [Parameters]
 minsep = 2.
-maxsep = 12. 
+maxsep = 25. 
 nbins = 10
 bin_type = Log      
 nmult = 100        
@@ -11,10 +11,10 @@ brute = False
 nquant = 4       
 #cutoff = 3
 bin_K = adhoc
-def_thresh = 23.5
+def_thresh = 25
 def = none
 
-sample = 700control
+sample = agn
 gclass = 0
 bptagn = 99
 write = True
