--- a/cross+int.ini
+++ b/cross+int.ini
@@ -13,8 +13,10 @@ nquant = 1
 bin_K = adhoc
 def_thresh = 25
 def = none
+cz_min = 1200
+cz_max = 5000
 
-sample = 700control
+sample = all2MRS_noAGN
 gclass = 0
 bptagn = 99
 write = True
