--- a/cross+int.ini
+++ b/cross+int.ini
@@ -1,20 +1,21 @@
 ######################
 [Parameters]
 minsep = 2.
-maxsep = 25. 
-nbins = 10
+maxsep = 80. 
+nbins = 18
 bin_type = Log      
 nmult = 100        
 #npatch = 50
-nbootstrap = 500 
+nbootstrap = 100 
 brute = False
 nquant = 1       
 #cutoff = 3
 bin_K = adhoc
 def_thresh = 25
 def = none
-cz_min = 1200
-cz_max = 5000
+dec_max = 0
+cz_min = 8000
+cz_max = 9400
 
 sample = all2MRS_noAGN
 gclass = 0
