implemented cluster mask

--- a/cross+int.ini
+++ b/cross+int.ini
@@ -8,16 +8,17 @@ nmult = 100
 #npatch = 50
 nbootstrap = 100 
 brute = False
-nquant = 4       
+nquant = 1       
 #cutoff = 3
 bin_K = adhoc
 def_thresh = 25
 def = none
-dec_max = 30
+dec_max = -25
 cz_min = 1200
-cz_max = 
+cz_max = 3600
+cluster_mask = True
 
-sample = 700control
+sample = all2MRS_noAGN
 gclass = 0
 bptagn = 99
 write = True
