--- a/cross+int.ini
+++ b/cross+int.ini
@@ -1,24 +1,24 @@
 ######################
 [Parameters]
 minsep = 2.
-maxsep = 80. 
+maxsep = 25. 
 nbins = 18
 bin_type = Log      
 nmult = 100        
 #npatch = 50
 nbootstrap = 100 
 brute = False
-nquant = 1       
+nquant = 4       
 #cutoff = 3
 bin_K = adhoc
 def_thresh = 25
-def = none
-dec_max = -25
+def = low
+dec_max = 30
 cz_min = 1200
-cz_max = 3600
-cluster_mask = True
+cz_max =  
+cluster_mask = False
 
-sample = all2MRS_noAGN
+sample = 700control
 gclass = 0
 bptagn = 99
 write = True
