added decmax to names

--- a/cross+int.ini
+++ b/cross+int.ini
@@ -8,17 +8,17 @@ nmult = 100
 #npatch = 50
 nbootstrap = 100 
 brute = False
-nquant = 4       
+nquant = 1       
 #cutoff = 3
 bin_K = adhoc
 def_thresh = 25
-def = low
-dec_max = 30
-cz_min = 1200
-cz_max =  
+def = none
+dec_max = -40
+cz_min = 8000
+cz_max = 9400 
 cluster_mask = False
 
-sample = 700control
+sample = all2MRS_noAGN
 gclass = 0
 bptagn = 99
 write = True
