--- a/cross+int.ini
+++ b/cross+int.ini
@@ -1,22 +1,27 @@
 ######################
 [Parameters]
 minsep = 2.
-maxsep = 25. 
+maxsep = 80. 
 nbins = 18
 bin_type = Log      
 nmult = 100        
 #npatch = 50
 nbootstrap = 100 
 brute = False
+
 nquant = 1       
-#cutoff = 3
 bin_K = adhoc
-def_thresh = 25
-def = none
-dec_max = -40
+dec_min = -90
+dec_max = 30
 cz_min = 8000
-cz_max = 9400 
+cz_max = 9400
+
+milkyway_mask = True
 cluster_mask = False
+cluster_file = '../data/Local_Clusters_z0.055.txt'
+deflection = None
+deflection_file = '../data/JF12_GMFdeflection_Z1_E10EeV.csv'
+def_thresh = 25
 
 sample = all2MRS_noAGN
 gclass = 0
