2D KDE for randoms

--- a/cross+int.ini
+++ b/cross+int.ini
@@ -13,14 +13,14 @@ nquant = 1
 bin_K = adhoc
 dec_min = -90
 dec_max = 30
-cz_min = 8000
-cz_max = 9400
+cz_min = 1200
+cz_max = 3600
 
 milkyway_mask = True
 cluster_mask = False
-cluster_file = '../data/Local_Clusters_z0.055.txt'
-deflection = None
-deflection_file = '../data/JF12_GMFdeflection_Z1_E10EeV.csv'
+cluster_file = ../data/Local_Clusters_z0.055.txt
+deflection = low
+deflection_file = ../data/JF12_GMFdeflection_Z1_E10EeV.csv
 def_thresh = 25
 
 sample = all2MRS_noAGN
