--- a/cross+int.ini
+++ b/cross+int.ini
@@ -2,28 +2,28 @@
 [Parameters]
 minsep = 2.
 maxsep = 80. 
-nbins = 18
+nbins = 15
 bin_type = Log      
 nmult = 100        
 #npatch = 50
 nbootstrap = 100 
 brute = False
 
-nquant = 1       
+nquant = 4       
 bin_K = adhoc
 dec_min = -90
-dec_max = 30
+dec_max = 0
 cz_min = 1200
-cz_max = 3600
+cz_max = 3600 
 
 milkyway_mask = True
 cluster_mask = False
 cluster_file = ../data/Local_Clusters_z0.055.txt
-deflection = low
+deflection = none
 deflection_file = ../data/JF12_GMFdeflection_Z1_E10EeV.csv
 def_thresh = 25
 
-sample = all2MRS_noAGN
+sample = 700control
 gclass = 0
 bptagn = 99
 write = True
