--- a/cross+int.ini
+++ b/cross+int.ini
@@ -12,9 +12,12 @@ brute = False
 nquant = 4       
 bin_K = adhoc
 dec_min = -90
-dec_max = 0
+dec_max = 10
+azimuth_max = 60
 cz_min = 1200
 cz_max = 3600 
+
+random_generation = exposure_filtered
 
 milkyway_mask = True
 cluster_mask = False
